# ml-system

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
examples/library_api/: ml_inferencer_load_mlflow_artifact.py
examples/webapi/: end_to_end_ml_training.py  end_to_end_ml_training_trainer_list_check.py  end_to_end_ml_training_update_trainer.py  inferencer_add_and_remove_model_from_mlflow.py  inferencer_add_model_from_mlflow_and_serve.py  load_model_from_mlflow.py  mlflow_agent_download_model_and_inference.py  setup_inferencer_model_serving_from_mlflow.py
src/: run_server.py  server.py
src/api_gateway/: receive_training_dataframe_gateway.py
src/data_analyzer/: stock_analyzer.py
src/data_io/: README.md
src/db_butler/: base_butler.py  minio_butler.py
src/ml_core/: README.md
src/model_ops_manager/: README.md
src/store/: data_processor_store.py  model_store.py  trainer_store.py
src/webapp/: data_io_serving_app.py  data_io_serving_app_router.py  ml_inference_serving_app.py  ml_inference_serving_app_router.py  ml_training_serving_app.py  ml_training_serving_app_router.py  mlflow_model_download_serving_app.py  mlflow_model_download_serving_app_route.py  mlflow_models_serving_app.py  mlflow_models_serving_app_router.py  stock_price_analyzer_serving_app.py  stock_price_analyzer_serving_app_route.py
tests/test_data_fetcher/: test_local_file_data_adaptor.py  test_yfinance_data_adaptor.py
tests/test_data_sink/: test_local_file_data_sinker.py
tests/test_end_to_end/: test_ml_training_progress.py  test_wrapped_serving_app.py
(+39 files in other folders)
