[metadata]
name = ml-system
description = A web service for machine learning system
author = PenHsuanWang
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: python :: 3
    Programming Language :: python :: 3 :: Only
    Programming Language :: python :: 3.10
    Programming Language :: python :: 3.11

[options]
packages =
    ml_system
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>3.9
    tox>=3.24

[options.package_data]
ml_system = py.typed

[flake8]
max-line-length = 160

